Implement a get and create ingredient endpoints
