# src/main/resources/api.yaml
@@ -10,6 +10,8 @@ servers:
 tags:
   - name: recipe
     description: Recipe information
+  - name: ingredient
+    description: ingredient information
 paths:
   /recipes:
     get:
@@ -140,6 +142,39 @@ paths:
           description: Recipe deleted.
         '404':
           description: The recipe was not found for the specified id
+  /ingredients:
+    get:
+      summary: Gets all the the ingredients
+      operationId: getIngredients
+      tags:
+        - ingredient
+      responses:
+        '200':
+          description: Returns all available ingredients.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/SimpleIngredientResponse"
+    post:
+      summary: create a new ingredient
+      operationId: createIngredient
+      tags:
+        - ingredient
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/IngredientRequest'
+        required: true
+      responses:
+        '201':
+          description: Ingredient created.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SimpleIngredientResponse"
 
 components:
   schemas:
@@ -229,4 +264,16 @@ components:
         unit:
           type: string
         ingredient:
+          type: string
+    SimpleIngredientResponse:
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        # To be supported later adding ingredient type
+    IngredientRequest:
+      properties:
+        name:
           type: string
